     and Carlos Z.F. Liu <carlos_liu@yahoo.com>.  (Closes: #231907)
   - debian/po/tr.po: added.  Patched by Ercin EKER <erc.caldera@gmx.net>
     and Recai Oktas <roktas@omu.edu.tr>.  (Closes: #240654)

   - debian/debhelper.in/glibc-doc.links: add manpages links for sem_*.

   - debian/patches/template.dpatch: split Author to Dpatch author and
     Patch author.

  * Jeff Bailey <jbailey@nisa.net>

   - debian/debhelper.in/libc.preinst: Don't use awk except in
     upgrade mode.  (Closes: #229461)
     Also make sure that it doesn't trip on words being added to the
     upstream revision number.  Thanks to James Troup for
     mentioning this.
     Thanks to Bastian Blank <waldi@debian.org> for the fix.
   - debian/debhelper.in/libc.postinst: Respect DEBIAN_FRONTEND=noninteractive
     for setting timezone.  Default to UTC.  (Closes: #196382)

   - debian/debhelper.in/libc.docs: Add TODO.

   Hopefully the last round of hurd-i386 fixes:

   - debian/debhelper.in/libc-dev.install.hurd-i386: New file.
   - debian/rules.d/debhelper.mk: Deal with the arch-specific install files.
   - debian/patches/hurd-cleanup.dpatch: New file for dl-procinfo.c and
     missing include in malloc.c (Both in upstream)
   - debian/patches/00list: Update

  Locales surgery, with many thanks to Petter Reinholdtsen:

   - debian/patches/glibc22-eo_EO.dpatch: Rename to ...
   - debian/patches/locale-eo_EO.dpatch: ... this.
   - debian/patches/11_cvs_locales.dpatch: New generated file from CVS.
   - debian/patches/locales-stuff.dpatch: Remove bogs code and split
     into ..
   - debian/patches/locale-de_CH.dpatch: ... this and ...
   - debian/patches/locale-ru_RU.dpatch: this.
   - debian/patches/locale-no_NO.dpatch: New file to keep no_NO around
     during the transition to nb_NO.
   - debian/patches/locale-strfmon.dpatch: New file from CVS needed
     for new locales formatting.
   - debian/patches/00list: Update.

   - debian/patches/glibc22-locales.dpatch: Obsoleted by CVS update.