@@ -1,0 +1,8 @@
+# hppa64 needs symlink /usr/hppa64-linux/include to /usr/include
+# (See: Bug#239020)  In future we may drop this file with supporting hppa64
+
+define libc6_extra_pkg_install
+mkdir -p debian/$(curpass)/usr
+mkdir -p debian/$(curpass)/usr/hppa64-linux
+ln -s /usr/include debian/$(curpass)/usr/hppa64-linux/include
+endef
