@@ -55,6 +55,11 @@ glibc (2.3.2.ds1-12) unstable; urgency=low
    - debian/patches/template.dpatch: split Author to Dpatch author and
      Patch author.
 
+   - debian/sysdeps/hppa.mk: added to create symlink
+     /usr/hppa64-linux/include to /usr/include for hppa64.  (Closes: #239020)
+   - debian/sysdeps/depflags.pl: added conflicts to gcc-3.3-hppa64 and
+     gcc-3.4-hppa64.
+
   * Jeff Bailey <jbailey@nisa.net>
 
    - debian/debhelper.in/libc.preinst: Don't use awk except in
